# Python-Simple-Group-Chat

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.client  Dockerfile.server  GEMINI.md  Makefile  README.md  client.py  config.example.json  config.example.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_tests.py  server.py  setup.py
.kiro/specs/chat-app-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/codebase-refactoring/: design.md  requirements.md  tasks.md
.kiro/steering/: Code Standards.md  product.md  structure.md  tech.md
chat_app/: __init__.py
chat_app/client/: __init__.py  chat_client.py  main.py
chat_app/client/network/: __init__.py  connection.py  message_handler.py
chat_app/client/performance/: __init__.py  ui_optimizer.py  update_scheduler.py
chat_app/client/ui/: __init__.py  display_manager.py  input_handler.py  layout_manager.py
chat_app/discovery/: __init__.py  service_discovery.py
chat_app/server/: __init__.py  chat_server.py  client_manager.py  main.py  message_broker.py
chat_app/server/performance/: __init__.py  memory_manager.py  message_queue.py  thread_pool.py
chat_app/server/scalability/: __init__.py  cluster_manager.py  connection_optimizer.py  load_balancer.py  resource_monitor.py
chat_app/server/security/: __init__.py  connection_limiter.py  rate_limiter.py  validator.py
chat_app/shared/: __init__.py  config.py  constants.py  exceptions.py  health.py  logging_config.py  metrics.py  models.py  protocols.py  utils.py
chat_app/tools/: __init__.py  benchmark_suite.py  load_tester.py
config/: development.json  production.json  testing.json
docs/: CONFIGURATION.md  DEPLOYMENT.md  FUZZING_AND_PROTOCOL_TESTS_FIXED.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  SCALABILITY_FEATURES_SUMMARY.md  TEST_SUITE_SUMMARY.md
old/: client.py  server.py  test_connection_limiter_simple.py
tests/: __init__.py  basic_client.py  basic_server.py  conftest.py
tests/fuzzing/: __init__.py  test_input_fuzzing.py  test_message_fuzzing.py  test_network_fuzzing.py
tests/integration/: test_client_server_communication.py  test_connection_security_integration.py  test_service_discovery_integration.py
tests/performance/: __init__.py  test_client_performance.py  test_server_performance.py  test_thread_pool_performance.py
tests/scalability/: __init__.py  test_load_balancer.py  test_load_testing.py  test_resource_monitor.py
tests/unit/test_client/: __init__.py  test_chat_client.py
tests/unit/test_client/test_network/: __init__.py  test_connection.py  test_message_handler.py
tests/unit/test_client/test_ui/: __init__.py  test_display_manager.py  test_input_handler.py  test_layout_manager.py
tests/unit/test_deployment/: __init__.py  test_packaging.py
tests/unit/test_discovery/: __init__.py  test_service_discovery.py
tests/unit/test_server/: __init__.py  test_chat_server.py  test_client_manager.py  test_main.py  test_message_broker.py
tests/unit/test_server/test_security/: __init__.py  test_connection_limiter.py  test_rate_limiter.py  test_validator.py
tests/unit/test_shared/: __init__.py  test_config.py  test_constants.py  test_exceptions.py  test_health.py  test_logging_config.py  test_metrics.py  test_models.py  test_protocols.py  test_utils.py
